5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1573_579.log
== SUBMITION (2019-04-01 15:42:23) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao."
-- EXECUTION TIME:
0.202198
-- ERROR:
  File "/home/codebench/codes/1573/579/main.py", line 2
    
                                                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:42:36) 
-- CODE:
print("A UFAM tem", 2019 - 1909, "anos de fundacao."
-- EXECUTION TIME:
0.132926
-- ERROR:
  File "/home/codebench/codes/1573/579/main.py", line 2
    
                                                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:39) 
-- CODE:
print("A UFAM tem", 2019 - 1909, "anos de fundacao."
-- ERROR:
File "XXXX", line 2
    
                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:42:40) 
-- CODE:
print("A UFAM tem", 2019 - 1909, "anos de fundacao."
-- EXECUTION TIME:
0.202067
-- ERROR:
  File "/home/codebench/codes/1573/579/main.py", line 2
    
                                                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:45:45) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundacao.")
-- EXECUTION TIME:
0.136902
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
